# atria_insights

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
conf/metric_overrides/: axiomatic.yaml  complexity.yaml  faithfulness.yaml
insightx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: build_registry.sh
scripts/explain/image_classification/: cifar10.sh
scripts/train/image_classification/: cifar10.sh
src/atria_insights/: build_registry.py
src/atria_insights/conf/engine/: default_explanation_engine.yaml  default_test_engine.yaml  default_validation_engine.yaml  default_visualization_engine.yaml
src/atria_insights/conf/expl_metric/axiomatic/: completeness.yaml  input_invariance.yaml  monotonicity_corr_and_non_sens.yaml
src/atria_insights/conf/expl_metric/complexity/:  complexity_entropy.yaml   complexity_entropy_feature_grouped.yaml   complexity_sundararajan.yaml   complexity_sundararajan_feature_grouped.yaml   effective_complexity.yaml   sparseness.yaml   sparseness_feature_grouped.yaml
src/atria_insights/conf/expl_metric/faithfulness/: aopc.yaml  faithfulness_corr.yaml  faithfulness_estimate.yaml  infidelity.yaml  monotonicity.yaml  sensitivity_n.yaml
src/atria_insights/conf/expl_metric/robustness/: sensitivity_max_and_avg.yaml
src/atria_insights/conf/explainer/: random.yaml
src/atria_insights/conf/explainer/grad/: deeplift.yaml  deeplift_shap.yaml  gradient_shap.yaml  guided_backprop.yaml  input_x_gradient.yaml  integrated_gradients.yaml  saliency.yaml
src/atria_insights/conf/explainer/perturbation/: feature_ablation.yaml  kernel_shap.yaml  lime.yaml  occlusion.yaml
src/atria_insights/conf/explainer_metric/axiomatic/: completeness.yaml  input_invariance.yaml  monotonicity_corr_and_non_sens.yaml
src/atria_insights/conf/explainer_metric/complexity/:  complexity_entropy.yaml   complexity_sundararajan_feature_grouped.yaml  complexity_entropy_feature_grouped.yaml  complexity_sundararajan.yaml  complexity_sundararajan_feature_grouped.yaml  effective_complexity.yaml  sparseness.yaml  sparseness_feature_grouped.yaml
src/atria_insights/conf/explainer_metric/faithfulness/: aopc.yaml  faithfulness_corr.yaml  faithfulness_corr_2.yaml  faithfulness_corr_4.yaml  faithfulness_corr_6.yaml  faithfulness_estimate.yaml  infidelity.yaml  monotonicity.yaml  sensitivity_n.yaml  sensitivity_n_2_normalized.yaml  sensitivity_n_4_normalized.yaml  sensitivity_n_6_normalized.yaml
src/atria_insights/conf/explainer_metric/robustness/: sensitivity_max_and_avg.yaml
src/atria_insights/conf/explainer_pipeline/: image_classification.yaml  image_classification_explainer.yaml
src/atria_insights/conf/task_pipeline/explainer/: default.yaml  image_classification.yaml  layout_analysis.yaml  layout_token_classification.yaml  sequence_classification.yaml  token_classification.yaml  visual_question_answering.yaml
src/atria_insights/engines/: explanation_engine.py  explanation_step.py  utilities.py
src/atria_insights/explainer_pipelines/: atria_explainer_pipeline.py  defaults.py  image_classification.py  utilities.py
src/atria_insights/explainer_pipelines/classification/: image.py
src/atria_insights/explainer_pipelines/sequence_classification/: base_pipeline.py  layoutlmv3.py
src/atria_insights/explainers/: registry.py
src/atria_insights/explanation_pipelines/: atria_explanation_pipeline.py  utilities.py
src/atria_insights/explanation_pipelines/classification/: image.py
src/atria_insights/metrics/: registry.py  torchxai_metric.py
src/atria_insights/registry/: __init__.py  module_registry.py  registry_groups.py
src/atria_insights/task_pipelines/: _explainer.py
src/atria_insights/utilities/: containers.py  h5io.py  image.py
src/insightx/: __init__.py  config.py  model_explainer.py
src/insightx/conf/: build_configurations.py  model_explainer.yaml
src/insightx/conf/engine/: default_explanation_engine.yaml
src/insightx/conf/engine_step/: default_explanation_step.yaml
src/insightx/conf/explainer/: random.yaml
src/insightx/conf/explainer/grad/: deeplift.yaml  deeplift_shap.yaml  gradient_shap.yaml  guided_backprop.yaml  input_x_gradient.yaml  integrated_gradients.yaml  saliency.yaml
src/insightx/conf/explainer/perturbation/: feature_ablation.yaml  kernel_shap.yaml  lime.yaml  occlusion.yaml
src/insightx/conf/metric/axiomatic/: completeness.yaml  input_invariance.yaml  monotonicity_corr_and_non_sens.yaml
src/insightx/conf/metric/complexity/: complexity_entropy.yaml  complexity_entropy_feature_grouped.yaml  complexity_sundararajan.yaml  complexity_sundararajan_feature_grouped.yaml  effective_complexity.yaml  sparseness.yaml  sparseness_feature_grouped.yaml
src/insightx/conf/metric/faithfulness/: aopc.yaml  faithfulness_corr.yaml  faithfulness_estimate.yaml  infidelity.yaml  monotonicity.yaml  sensitivity_n.yaml
src/insightx/conf/metric/robustness/: sensitivity_max_and_avg.yaml
src/insightx/conf/model_explainability_wrapper/: image_classification_explainability_wrapper.yaml
src/insightx/conf/task_module/: image_classification_explanation_module.yaml
src/insightx/engines/: config.py  explanation_engine.py  explanation_results_cacher.py  explanation_results_saver.py  explanation_step.py  metrics_cacher.py  sample_output_saver.py  train_baselines_generation_engine.py  train_baselines_generation_step.py  utilities.py
src/insightx/explainers/: config.py
src/insightx/metrics/: config.py  torchxai_metric.py
src/insightx/model_explainability_wrappers/: base.py  config.py  utils.py
src/insightx/model_explainability_wrappers/classification/: image.py
src/insightx/registry/: module_registry.py
src/insightx/task_modules/: config.py  explanation_task_module.py  model_output_wrappers.py  utilities.py
src/insightx/task_modules/classification/: image.py
src/insightx/task_pipelines/: _explainer.py  explainer.py  model_explainer.py
src/insightx/task_runners/: config.py  model_explainer.py
src/insightx/utilities/: common.py  containers.py  h5io.py
